--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-modules-core": "^1.2.5",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "moti": "^0.24.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
@@ -29,6 +30,7 @@
     "react-native-reanimated": "^3.0.2",
     "react-native-shadow-2": "^7.0.6",
     "react-native-shared-element": "^0.8.8",
+    "react-native-svg": "^13.8.0",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.10",
     "react-navigation-shared-element": "^3.1.3"
