--- a/package.json
+++ b/package.json
@@ -15,47 +15,34 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
-<<<<<<< HEAD
-    "expo": "^48.0.0",
-    "expo-font": "~11.1.1",
-    "expo-linear-gradient": "^12.1.2",
-    "expo-modules-core": "^1.2.5",
-    "expo-splash-screen": "~0.18.1",
-=======
     "axios": "^1.4.0",
     "expo": "^48.0.0",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "^14.1.1",
     "expo-linear-gradient": "^12.1.2",
     "expo-modules-core": "~1.2.7",
     "expo-splash-screen": "~0.18.2",
->>>>>>> 54e3129a79bfc4e7db761319b014ee571138faaf
     "expo-status-bar": "~1.4.4",
     "moti": "^0.24.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-<<<<<<< HEAD
-    "react-native": "0.71.3",
-    "react-native-linear-gradient": "^2.6.2",
-    "react-native-maps": "1.3.2",
-    "react-native-reanimated": "^3.0.2",
-    "react-native-shadow-2": "^7.0.6",
-    "react-native-shared-element": "^0.8.8",
-    "react-native-svg": "^13.8.0",
-=======
     "react-native": "0.71.8",
+    "react-native-element-dropdown": "^2.9.0",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-picker": "^5.4.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "1.3.2",
-    "react-native-reanimated": "~2.14.4",
     "react-native-shadow-2": "^7.0.6",
     "react-native-shared-element": "^0.8.8",
-    "react-native-svg": "13.4.0",
->>>>>>> 54e3129a79bfc4e7db761319b014ee571138faaf
+    "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.10",
-    "react-navigation-shared-element": "^3.1.3"
+    "react-navigation-shared-element": "^3.1.3",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/styled-components": "^5.1.26"
   },
   "private": true
 }
