--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-community/blur": "^4.3.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
@@ -27,11 +28,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-element-dropdown": "^2.9.0",
+    "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-picker": "^5.4.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "1.3.2",
+    "react-native-reanimated": "^3.3.0",
     "react-native-shadow-2": "^7.0.6",
     "react-native-shared-element": "^0.8.8",
     "react-native-vector-icons": "^9.2.0",
