--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-action-button": "^2.8.5",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-floating-action": "^1.22.0",
+    "react-native-floating-action-menu": "^1.2.4",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-picker": "^5.4.0",
     "react-native-linear-gradient": "^2.6.2",
@@ -38,6 +40,7 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-shadow-2": "^7.0.6",
     "react-native-shared-element": "^0.8.8",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.10",
