--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "^3.3.0",
+    "react-native-select-dropdown": "^3.3.4",
     "react-native-shadow-2": "^7.0.6",
     "react-native-shared-element": "^0.8.8",
     "react-native-snap-carousel": "^3.9.1",
